--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
     <div style="height:100%;width:100%;display:flex; align-items: center; justify-content: center;flex-direction: column">
         <ons-button onclick="window.location.href = 'page.html'" class="home-item">Start</ons-button>
-        <ons-button class="home-item">Infos</ons-button>
+        <ons-button onclick="window.location.href = 'info.html'" class="home-item">Infos</ons-button>
     </div>
 </ons-page>
 </body>
 </html>
 <style>
     .home-item {
-        width  : 50%;
-        margin : 5%;
+        width: 50%;
+        margin: 5%;
     }
 </style>
